<resources>
    <string name="app_name">Mobile Vector Calculator</string>

    <string name="cartesian_coordinate">Cartesian Coordinate</string>
    <string name="vector1x1_hint">Vector1: x</string>
    <string name="vector1y1_hint">Vector1: y</string>
    <string name="vector2x2_hint">Vector2: x</string>
    <string name="vector2y2_hint">Vector2: y</string>
    <string name="vector3x3_hint">Vector3: x</string>
    <string name="vector3y3_hint">Vector3: y</string>
    <string name="button_send1">Calculate Cartesian</string>
    <string name="vector_addition">Vector Addition</string>
    <string name="scalar_product">Scalar Product of 2 vectors</string>
    <string name="vector_product">Vector Product of 2 vectors</string>
    <string name="title_activity_second_activity">Result of Cartesian Vector Calculation</string>


    <string name="polar_coordinate">Polar Coordinate</string>
    <string name="polar_vector1x1_hint">Vector1: radius</string>
    <string name="polar_vector1y1_hint">Vector1: angle</string>
    <string name="polar_vector2x2_hint">Vector2: radius</string>
    <string name="polar_vector2y2_hint">Vector2: angle</string>
    <string name="polar_vector3x3_hint">Vector3: radius</string>
    <string name="polar_vector3y3_hint">Vector3: angle</string>
    <string name="button_send2">Calculate Polar</string>
    <string name="title_activity_alternate_second_activity">Result of Polar Vector Calculation</string>


    <string name="hello_world">Greetings</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_alternate_second">AlternateSecondActivity</string>
</resources>
