<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <RadioGroup
        android:paddingTop="10dp"
        android:id="@+id/cartesian_radio"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton android:id="@+id/vector_addition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vector_addition"
            android:checked="true"/>

        <RadioButton android:id="@+id/scalar_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scalar_product"
            android:checked="false" />

        <RadioButton android:id="@+id/vector_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vector_product"/>

    </RadioGroup>

    <TextView
        android:paddingTop="10dp"
        android:text="@string/cartesian_coordinate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        android:layout_below="@id/cartesian_radio"/>

    <Button
        android:onClick="sendMessage1"
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/button_send1"
        android:layout_above="@+id/v1"
        android:layout_alignRight="@+id/v1" />

    <LinearLayout
    android:id="@+id/v1"
    android:paddingTop="5dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:weightSum="2"
    android:orientation="horizontal"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <EditText
        android:id="@+id/x1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        android:layout_weight="1"
        android:hint="@string/vector1x1_hint"></EditText>
    <EditText
        android:id="@+id/y1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        android:layout_weight="1"
        android:hint="@string/vector1y1_hint"></EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/v2"
        android:paddingTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_below="@id/v1">

        <EditText
            android:id="@+id/x2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:layout_weight="1"
            android:hint="@string/vector2x2_hint"></EditText>
        <EditText
            android:id="@+id/y2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:layout_weight="1"
            android:hint="@string/vector2y2_hint"></EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/v3"
        android:paddingTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:paddingBottom="10dp"
        android:orientation="horizontal"
        android:layout_below="@id/v2">

        <EditText
            android:id="@+id/x3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:layout_weight="1"
            android:hint="@string/vector3x3_hint"></EditText>
        <EditText
            android:id="@+id/y3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:layout_weight="1"
            android:hint="@string/vector3y3_hint"></EditText>
    </LinearLayout>


    <TextView
        android:paddingTop="30dp"
        android:text="@string/polar_coordinate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_below="@id/v3"/>

    <Button
        android:padding="10dp"
        android:onClick="sendMessage2"
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/button_send2"
        android:layout_below="@+id/v3"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignStart="@+id/button1" />


    <LinearLayout
        android:id="@+id/pv1"
        android:paddingTop="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/px1"
            android:inputType="numberSigned|numberDecimal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:hint="@string/polar_vector1x1_hint"></EditText>
        <EditText
            android:id="@+id/py1"
            android:inputType="numberSigned|numberDecimal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:hint="@string/polar_vector1y1_hint"></EditText>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/pv2"
        android:paddingTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:inputType="numberSigned|numberDecimal"
        android:orientation="horizontal"
        android:layout_below="@+id/pv1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/px2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:inputType="numberSigned|numberDecimal"
            android:hint="@string/polar_vector2x2_hint"></EditText>
        <EditText
            android:id="@+id/py2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:inputType="numberSigned|numberDecimal"
            android:hint="@string/polar_vector2y2_hint"></EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pv3"
        android:paddingTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_below="@+id/pv2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/px3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:inputType="numberSigned|numberDecimal"
            android:hint="@string/polar_vector3x3_hint"></EditText>
        <EditText
            android:id="@+id/py3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:inputType="numberSigned|numberDecimal"
            android:hint="@string/polar_vector3y3_hint"></EditText>
    </LinearLayout>





</RelativeLayout>
